fix(jdk8): fix jdk8 support